Toph cleaning up headings

--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "rg results summary tables template"
-author: "Abigail ter Kuile"
+author: "Abigail ter Kuile, Christopher Huebel, Johan Zvrskovec, Alish Palmos, Oliver Pain"
 date: "28/08/2021"
 output: html_document
 ---
 
+# Set up
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       comment=NA,
@@ -17,7 +18,7 @@ Clear global environment
 remove(list = ls())
 ```
 
-# Package setup
+Package setup
 ```{r Packages}
 library(optparse)
 library(data.table)
